# wiki_to_markdown

./: CMakeLists.txt  README.md  testna.txt  tt.txt  wiki_to_markdown_link.c  wtm.sh
include/: parser.h  reader.h  result.h
src/: main.c  parser.c  reader.c  result.c
